--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,10 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.0",
     "tailwindcss": "^4.0.12",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "i18next": "^23.0.1",
+    "react-i18next": "^14.0.1",
+    "i18next-browser-languagedetector": "^7.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
